kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraper-service
  labels:
    app: scraper-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /(.*)
        backend:
          service:
            name: scraper-service
            port: 
              number: 8080
      - pathType: Exact
        path: /metrics
        backend:
          service:
            name: scraper-service
            port:
              number: 9095
